--- a/code/public/index.html
+++ b/code/public/index.html
@@ -8,6 +8,7 @@
   <div id="summary"></div>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="https://s3-us-west-1.amazonaws.com/movie-summary-bundle/bundle.js"></script>
+  
+  <script crossorigin src="./bundle.js"></script>
 </body>
 </html>
