--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <div id="summary"></div>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script async crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script async crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   
-  <script crossorigin src="./bundle.js"></script>
+  <script async crossorigin src="./bundle.js"></script>
 </body>
 </html>
