--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div id="summary"></div>
-  <script async crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script async crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script async crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script async crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   
   <script async crossorigin src="./bundle.js"></script>
 </body>
